# Q-STAT

./: .gitignore  Dockerfile  LICENSE  README.md  claude.md  docker-compose.yml  node_interface.md  pyproject.toml
be/: Dockerfile  pyproject.toml
be/src/: llm.py  loader.py  main.py  schemas.py  state.py
be/src/agents/: column_selector_agent.py  tool_selector_agent.py
be/src/agents/reporter/: __init__.py  action_advisor.py  interpreter.py  report_generator.py
be/src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  store.py
be/src/routers/: dashboard.py  notifications.py  workflow.py
be/src/schemas/: __init__.py  common.py  dashboard.py  notifications.py
be/src/state_schemas/: __init__.py  nodes.py  state.py
data/: init.sql
data/dummy_data/: bom_dummy_data.csv  eqp_pm_data(mes).xlsx  fdc_dummy_data.csv
fe/: Dockerfile  index.html  package.json  vite.config.js
fe/src/: App.vue
knowledge/: README.md
mcp/: Dockerfile  pyproject.toml
mcp/src/: check_plot_generator.py  server.py  test_mcp_client.py  test_tools.py
mcp/src/tools/: __init__.py  anova.py  chi_square.py  control_chart.py  correlation.py  pca.py  plot_generator.py  regression.py  t_test.py  text_to_sql.py  time_series.py
mcp/src/utils/: __init__.py  db.py  validators.py
src/: loader.py  main.py
src/EDA/: data_analysis.py
