# mcp/pyproject.toml
[project]
name = "Q-STAT-mcp"
version = "0.1.0"
description = "Q-STAT MCP 통계 도구 서버"
requires-python = ">=3.12"

dependencies = [
    # --- MCP ---
    "mcp[cli]>=1.0.0",

    # --- 통계 ---
    "scipy>=1.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",

    # --- 시각화 ---
    "matplotlib>=3.9.0",
    "plotly>=5.20.0",

    # --- DB ---
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",

    # --- LLM (text_to_sql용) ---
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-ollama>=0.3.0",

    # --- 유틸 ---
    "python-dotenv>=1.0.0",
]

[tool.uv]